--- a/assets/scss/topnav.sass
+++ b/assets/scss/topnav.sass
@@ -43,8 +43,8 @@
       min-width: 12rem
 
   .search-icon
-    width: 19.5px
-    height: 19.5px
+    width: 20px
+    height: 20px
     fill: $dark-white
 
   .v-autocomplete
